finally fixed the footer it was not sticking to the bottom, a made it a little thicker height now 70px its abit too big I think but i need to find another solution to anchor it the bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,40 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
+/* colours*/
 
+main {
+    
+    background:white;
 
+}
+/* nav bar*/
+
+.navbar{
+    height: 50px;
+    
+}
+
+.navbar-nav{
+    background-color: #2089F2;
+    opacity: 1;
+}
+                                                       
+
+                                                                                                                                                                                                                                                                                                                                                                                                                    
+  
+  .nav-item a:hover{
+      background-color: rgb(17, 182, 233);
+  }
+  .nav-item a:hover {
+    border:solid rgb(49, 197, 30)
+  }
+
+  
+
+/* This is home page*/
 .jumbotron {
 background-image: url("../images/banner 2.jpg");
-height: 360px;
+height: 380px;
 background-size: cover;
 margin-bottom: 0%;
 background-position: center;
@@ -17,19 +47,9 @@ transition: all .5s ease-in-out ;
 
   
 .container-fluid {
-    background-color: #0275d8;
+    background-color: #2089F2;
     height:50px
 
-}
-
-.navbar{
-    height: 50px;
-    
-}
-
-.navbar-nav{
-    background-color: #0275d8;
-    opacity: 1;
 }
 
 .container-fluid h1 {
@@ -42,31 +62,9 @@ transition: all .5s ease-in-out ;
     font-size:40px ;
     font-weight: 600;
 }
-                                                           
-
-                                                                                                                                                                                                                                                                                                                                                                                                                      
 
 
 
-
-
-main {
-    
-    background:white;
-
-}
-
-
-
- 
-  
-  .nav-item a:hover{
-      background-color: rgb(17, 182, 233);
-  }
-  .nav-item a:hover {
-    border:solid rgb(49, 197, 30)
-  }
-  
   .icons i {
     padding-top: 5px;
     display: block;
@@ -77,12 +75,23 @@ main {
 
 }
   
-.col-md-4 h2{
-    text-align: center;
-    font-family:"Roboto", sans-serif;
-    font-weight: 500;
+.container .col-md-4 h2 {
+     text-align: center;
+    font-family:"Exo", sans-serif;
+    font-weight: 700;
     text-align: center;
     font-size: 30px;
+    
+
+}
+ .container .col-md-4 p {
+     text-align: center;
+    font-family:"roboto", sans-serif;
+    font-weight: 200;
+    text-align: center;
+    font-size: 20px;
+    
+
 }
 
 
@@ -118,7 +127,7 @@ main {
     font-size:20px;
     font-weight:500;
     background-color:rgb(17, 182, 233);
-    border-color: rgb(49, 197, 30);
+    border-color: #6FDF0E;
     color: black;
 }
     
@@ -126,6 +135,7 @@ main {
  #image  {
   background-image: url("../images/inch\ beach.jpg");
   background-size: cover;
+  
 }
 
 
@@ -169,7 +179,7 @@ main {
 }
 .coffee-size{
     max-width:400px;
-    max-height: 430px;
+    max-height:430px;
 }
 .progress{
     height: 40px;
@@ -181,12 +191,20 @@ main {
     width:100%;
 }
 
-.container .col-md-4 h2, h3{
+.container .col-md-4 h2 {
      text-align: center;
-    font-family:"Roboto", sans-serif;
+    font-family:"Exo", sans-serif;
     font-weight: 400;
     text-align: center;
-    font-size: 25px;
+    font-size: 30px;
+
+}
+.container .col-md-4 p {
+     text-align: center;
+    font-family:"roboto", sans-serif;
+    font-weight: 400;
+    text-align: center;
+    font-size: 20px;
 
 }
 .card mb-4 box-shadow{
@@ -212,18 +230,16 @@ main {
     font-family:"Roboto", sans-serif;
     text-align: justify;
 }
-.footer {
-     background-color:#0275d8 
-     
-
- }  
+ 
   .footer P {
      color:ghostwhite;
      padding-bottom: 6px;
+     text-align: center;
   }
   .footer  {
     height: 70px;
-    background-color:#0275d8;
+    background-color:#2089F2;
+    margin-bottom: 0;
    
   
 }
@@ -231,14 +247,16 @@ main {
   
 .social-networks{   
     text-align: center;
+    padding-right: 30px;
 
 }
+
 
 .social-networks li{                                                                                                                                                                                                                                                                            
     display: inline;
 }
 .social-networks  i {
-    font-size: 200%;
+    font-size: 150%;
     margin: 1%;
     padding-top: 2px;
     margin-top: 2px;
